# paw_statistics

./: README.md  demo.py  download_model.py  fetch_from_osf.py  manifest.in  requirements.txt  setup.cfg  setup.py  verify_installation.py
code/: DataFrameViewerUI.py  ImageSequenceExporter.py  __init__.py  interactive_plot_UI.py  kpt_sttngs.json  paw_detector.py  paw_detector_torch.py  paw_statistics.py  plotter_UI.py
code/paw_statistics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: demo.py  meta_data.json  workflow_demo_inference.py  workflow_inference.py  workflow_inference_images.py  workflow_inference_videos.py  worklflow_demo_analysis.py
