[metadata]
name = paw_statistics
version = 0.1.0
description = Paw keypoint segmentation and analysis tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Christian Pritz
license = MIT
home_page = https://github.com/ChristianPritz/paw_statistics

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    scikit-learn
    pycircstat
    opencv-python-headless

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    flake8
    statsmodels
